--- a/.github/workflows/studio.yml
+++ b/.github/workflows/studio.yml
@@ -47,6 +47,8 @@ jobs:
 
       - uses: pnpm/action-setup@v4
         if: ${{ steps.pkgman.outputs.package_manager == 'pnpm' }}
+        with:
+          version: 9.15.6
         name: Install pnpm
         id: pnpm-install
 
